# fosolvers

./: CMakeLists.txt  LICENSE  README  _config.yml  index.html  index.md  params.json
CMakeModules/: FindCGNS.cmake  FindMATHEVAL.cmake  FindSUNDIALS.cmake
cv3dALE/: Makefile  cv3dALE.f90  fileio.f90  main.f90  misc.f90  utility.f90
doc/: libfosolvers.readme  libfosolvers.wiki
doc/foeuler/: Makefile  flow.eps  guide.tex
doc/fopbc/: flow.eps  guide.tex
examples/foeuler/: bc  conditions  fl  grid.msh  ic  sim
examples/foeuler/duct/: bc  fl  ic  sim
examples/fopbc/swirl/: bc  fl  grid.msh  ic  sim
heat3dFVM/: Makefile  conditions.cod  fileio.f90  grid.msh  heat3dFVM.f90  heat3dFVM.sh  installer.sh  materials.mtl  misc.f90  tadv.f90
heat3dFVM/test/: conditions.cod  materials.mtl
libfosolvers/: CMakeLists.txt  Makefile  cond.f90  fileio.f90  fvm.f90  grid.f90  misc.f90  mp.f90  mp1.f90  mp2.f90  mtl.f90  simpgeo.f90  time.f90  utility.f90
libfosolvers/demo/: CMakeLists.txt  Makefile  conditions.cod  data.tab  demo.f90  grid.msh  materials.mtl  startDemo.sh  start_demo.sh
libtest/: Makefile  grid.msh  libtest.f90
se3dFEM/: Makefile  asm.f90  conditions.cod  fileio.f90  grid.msh  installer.sh  materials.mtl  misc.f90  rst.msh  rst.msh.opt  se3dFEM.f90  se3dFEM.sh  stima.f90
src/: CMakeLists.txt  Doxyfile
src/foburn1d/: CMakeLists.txt  foburn1d.f90  miscBurn1D.f90
src/foeuler/: CMakeLists.txt  foeuler.f90
src/foeulerss/: CMakeLists.txt  foeulerss.f90
src/foflow/: CMakeLists.txt  cond  foflow.f90  miscNS.f90  resFuncNS.f90  sim
src/fons/: CMakeLists.txt  cond  fons.f90  miscNS.f90  resFuncNS.f90
src/fopbc/: CMakeLists.txt  fkfun.f90  fkprec.f90  fopbc.f90  modPbc.f90
src/fopiso/: CMakeLists.txt  fkfun.f90  fkprec.f90  fopiso.f90  modPiso.f90
src/libfosolvers/: CMakeLists.txt
src/libfosolvers/AlgebraicSolver/: moduleNonlinearSolve.f90
src/libfosolvers/BasicDataStruct/: moduleBasicDataStruct.f90
src/libfosolvers/Condition/: moduleCondition.f90
src/libfosolvers/FEM/: SMQ.f90  basicFEM.f90  edgeFEM.f90
src/libfosolvers/FVM/: Euler.f90  Newtonian.f90  RhieChow.f90  advection.f90  diffusion.f90  gradient.f90  moduleFVMConvect.f90  moduleFVMDiffus.f90  moduleFVMGrad.f90  pressure.f90  reconstruction.f90
src/libfosolvers/FileIO/: moduleFileIO.f90
src/libfosolvers/Grid/: moduleGrid.f90  moduleGridInspection.f90  moduleGridOperation.f90
src/libfosolvers/Grid1D/: moduleGrid1D.f90
src/libfosolvers/GridOperation/: moduleGridOperation.f90
src/libfosolvers/Interpolation/: moduleInterpolation.f90
src/libfosolvers/Misc/: moduleCLIO.f90
src/libfosolvers/MultiProcessing/: moduleMPIComm.f90
src/libfosolvers/SimpleGeometry/: moduleSimpleGeometry.f90
src/libfosolvers/SimpleSetLogic/: moduleSimpleSetLogic.f90
src/libfosolvers/SpatialHashing/: moduleSpatialHashing.f90
src/libfosolvers/UDF/: UDF.f90
src/libfosolvers/cellPair/: cellPair.f90
src/libfosolvers/condition/: condition.f90
src/libfosolvers/contrib/SPARSKIT2/BLASSM/: blassm.f  matvec.f
src/libfosolvers/contrib/SPARSKIT2/FORMATS/: formats.f  unary.f
src/libfosolvers/contrib/SPARSKIT2/ITSOL/: ilut.f
src/libfosolvers/contrib/fmetis/: metis_interface.f90
src/libfosolvers/fileIO/: CGNS.f90  GMSH.f90  GTS.f90  UDFTab.f90  VTK.f90  condTab.f90  fileIO.f90
src/libfosolvers/geometry/: geometry.f90
src/libfosolvers/misc/: sort.f90
src/libfosolvers/numerics/: SUNDIALS.f90  numerics.f90  sparse.f90
src/libfosolvers/otGrid/: otGrid.f90  otree.c  otree.h
src/libfosolvers/polyGrid/: polyEdgeFeGrid.f90  polyFeGrid.f90  polyFvGrid.f90  polyGrid.f90  polyMesh.f90  polyX.f90
src/libfosolvers/polyMesh/: polyMesh.f90
src/test/: BDFNewtonKrylov1.f90  CMakeLists.txt  ILU1.f90  NewtonKrylov1.f90  UDF1.f90  advection1.f90  advection2.f90  advection3.f90  basicFEM1.f90  diffusion1.f90  edgeFEM1.f90  euler.f90  eulerJac.f90  fixPt.f90  fixPt1.f90  gradient1.f90  gradient2.f90  grid.msh  gridGMSH1.msh  gridGMSH2.msh  gridGMSH3.msh  gridGMSH4.msh  gridGMSH5.msh  matVecMul.f90  multiFront1.f90  otGrid1.f90  otGrid2.f90  polyFeGrid1.f90  polyFvGrid1.f90  polyGrid1.f90  polyMesh1.f90  polyX1.f90  readCondTab1.f90  readGTS1.f90  readVTK1.f90  runTest.sh  showTestRst.f90  sums.md5  test.f90  tests.f90  (+1 more)
src/test/data/: bar_tet.vtk  condition_simple  grid.vtk  grid_simple.vtk  mesh.gts  mesh.vtk  tet10.msh  udf  wireInBox.msh
