CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(FOSolverS)
ENABLE_LANGUAGE(Fortran C)

# compiler & linker arguments
SET(CMAKE_Fortran_COMPILER mpif90)
SET(CMAKE_Fortran_FLAGS "-Wall -Ofast -march=native -fopenmp")
SET(CMAKE_C_COMPILER mpicc)
SET(CMAKE_C_FLAGS "-Wall -Ofast -march=native -fopenmp -std=c11")
SET(CMAKE_EXE_LINKER_FLAGS "-Wall -Ofast -march=native -fopenmp")
SET(CMAKE_SHARED_LINKER_FLAGS "-Wall -Ofast -march=native -fopenmp")

# module, executable & lib output directories
SET(CMAKE_Fortran_MODULE_DIRECTORY ${PROJECT_BINARY_DIR}/include)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

# include/library directories
INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR}/include)
LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib)

# external packages
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/CMakeModules)
# CGNS
FIND_PACKAGE(CGNS)
IF(CGNS_FOUND)
  INCLUDE_DIRECTORIES(${CGNS_INCLUDE_DIR})
ENDIF(CGNS_FOUND)
# hdf5
FIND_PACKAGE(HDF5)
IF(HDF5_FOUND)
  INCLUDE_DIRECTORIES(${HDF5_INCLUDE_DIRS})
ENDIF(HDF5_FOUND)
# BLAS
FIND_PACKAGE(BLAS)
# LAPACK
FIND_PACKAGE(LAPACK)
# SUNDIALS
FIND_PACKAGE(SUNDIALS)
IF(SUNDIALS_FOUND)
  INCLUDE_DIRECTORIES(${SUNDIALS_INCLUDE_DIRS})
ENDIF(SUNDIALS_FOUND)
# matheval
FIND_PACKAGE(MATHEVAL)
IF(MATHEVAL_FOUND)
  INCLUDE_DIRECTORIES(${MATHEVAL_INCLUDE_DIR})
ENDIF(MATHEVAL_FOUND)

# subdirectories
ADD_SUBDIRECTORY(src)
